test_next-20151119/20151118194534/build/defconfig/build_20151118194534_log.txt
test_build: Wed Nov 18 19:47:37 PST 2015: started on defconfig test_next-20151119 (4a79170ff5ccbbfa0969dcd2bef02b3ccf01e9e6)
test_build: Wed Nov 18 19:47:37 PST 2015: serial is 20151118194534
In file included from ./arch/arm64/include/asm/bitops.h:20:0,
                 from include/linux/bitops.h:36,
                 from include/linux/kernel.h:10,
                 from include/linux/list.h:8,
                 from include/linux/module.h:9,
                 from init/do_mounts.c:11:
include/net/sock.h: In function ‘sk_state_load’:
./arch/arm64/include/asm/barrier.h:71:3: error: read-only variable ‘___p1’ used as ‘asm’ output
   asm volatile ("ldarb %w0, %1"    \
   ^
include/net/sock.h:2238:9: note: in expansion of macro ‘smp_load_acquire’
  return smp_load_acquire(&sk->sk_state);
         ^
./arch/arm64/include/asm/barrier.h:75:3: error: read-only variable ‘___p1’ used as ‘asm’ output
   asm volatile ("ldarh %w0, %1"    \
   ^
include/net/sock.h:2238:9: note: in expansion of macro ‘smp_load_acquire’
  return smp_load_acquire(&sk->sk_state);
         ^
./arch/arm64/include/asm/barrier.h:79:3: error: read-only variable ‘___p1’ used as ‘asm’ output
   asm volatile ("ldar %w0, %1"    \
   ^
include/net/sock.h:2238:9: note: in expansion of macro ‘smp_load_acquire’
  return smp_load_acquire(&sk->sk_state);
         ^
./arch/arm64/include/asm/barrier.h:83:3: error: read-only variable ‘___p1’ used as ‘asm’ output
   asm volatile ("ldar %0, %1"    \
   ^
include/net/sock.h:2238:9: note: in expansion of macro ‘smp_load_acquire’
  return smp_load_acquire(&sk->sk_state);
         ^
make[1]: *** [init/do_mounts.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [init] Error 2
make: *** Waiting for unfinished jobs....
test_build: Wed Nov 18 19:47:46 PST 2015: FAILED on defconfig test_next-20151119
test_build: Wed Nov 18 19:47:46 PST 2015: ended on defconfig test_next-20151119
